--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="https://www.instagram.com/user nameanda">kunjungi instagram saya</a>
     <div class="kartu-profil">
       <!-- ... (konten sebelumnya) ...-->
-      <a href="...">kunjungi instagram saya
+      <a href="...">
   </div>
     <script src="script.js"></script>
 </body>
