--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
   <img src="foto-profil.jpg" alt="foto profil saya">
   <h1>Fahri Hozaini</h1>
   <p>siswa SMA yang tertarik dengan teknologi dan desain. selamat datang di websit pertama saya </p>
-  <a href="https://www.instagram.com/user nameanda">kunjungi instagram saya</a>
-    <div class="kartu-profil">
-      <!-- ... (konten sebelumnya) ...-->
-      <a href="...">
+  <a href="https://www.instagram.com/user nameanda">kunjungi ig saya</a>
+      <button id="sapabutton">sapa saya!</button>
   </div>
     <script src="script.js"></script>
 </body>
