--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--konten yang terlihat oleh pengunjung akan di sini -->
-  <div class="kartu-profil">
+  <div class="Screenshot 2025-10-17 213152.png">
   <img src="foto-profil.jpg" alt="foto profil saya">
   <h1>Fahri Hozaini</h1>
   <p>siswa SMA yang tertarik dengan teknologi dan desain. selamat datang di websit pertama saya </p>
