--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--konten yang terlihat oleh pengunjung akan di sini -->
   <div class="Screenshot 2025-10-17 213152.png">
-  <img src="foto-profil.jpg" alt="foto profil saya">
+  <img src="Screenshot 2025-10-17 213152.png" alt="foto profil saya">
   <h1>Fahri Hozaini</h1>
   <p>siswa SMA yang tertarik dengan teknologi dan desain. selamat datang di websit pertama saya </p>
   <a href="https://www.instagram.com/user nameanda">kunjungi ig saya</a>
